// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockColor renders 0 1`] = `
Array [
  .c0 {
  border-block-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders function 1`] = `
Array [
  .c0 {
  border-block-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders negative number 1`] = `
Array [
  .c0 {
  border-block-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-block-color: July;
  }
}

@media April {
  .c0 {
    border-block-color: August;
  }
}

@media January {
  .c0 {
    border-block-color: September;
  }
}

@media April {
  .c0 {
    border-block-color: November;
  }
}

@media June {
  .c0 {
    border-block-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-color: July;
  }
}

@media April {
  .c0 {
    border-block-color: August;
  }
}

@media January {
  .c0 {
    border-block-color: September;
  }
}

@media April {
  .c0 {
    border-block-color: November;
  }
}

@media June {
  .c0 {
    border-block-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-color: January;
  }
}

@media April {
  .c0 {
    border-block-color: December;
  }
}

@media January {
  .c0 {
    border-block-color: April;
  }
}

@media April {
  .c0 {
    border-block-color: May;
  }
}

@media June {
  .c0 {
    border-block-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-color: January;
  }
}

@media April {
  .c0 {
    border-block-color: December;
  }
}

@media January {
  .c0 {
    border-block-color: April;
  }
}

@media April {
  .c0 {
    border-block-color: May;
  }
}

@media June {
  .c0 {
    border-block-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders postitive number 1`] = `
Array [
  .c0 {
  border-block-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders string 1`] = `
Array [
  .c0 {
  border-block-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
